--- a/room.html
+++ b/room.html
@@ -74,6 +74,68 @@
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="script.js"></script>
+  <script>
+    const socket = io();
+
+    const canvas = document.getElementById("paintCanvas");
+    const ctx = canvas.getContext("2d");
+
+    function resizeCanvasToDisplaySize(canvas) {
+      const width = window.innerWidth;
+      const height = window.innerHeight;
+      canvas.width = width;
+      canvas.height = height;
+    }
+
+    resizeCanvasToDisplaySize(canvas);
+    window.addEventListener("resize", () => resizeCanvasToDisplaySize(canvas));
+
+    let drawing = false;
+
+    canvas.addEventListener("mousedown", () => drawing = true);
+    canvas.addEventListener("mouseup", () => drawing = false);
+    canvas.addEventListener("mouseout", () => drawing = false);
+
+    canvas.addEventListener("mousemove", (e) => {
+      if (!drawing) return;
+      const rect = canvas.getBoundingClientRect();
+      const x = e.clientX - rect.left;
+      const y = e.clientY - rect.top;
+      ctx.fillStyle = "black";
+      ctx.beginPath();
+      ctx.arc(x, y, 5, 0, Math.PI * 2);
+      ctx.fill();
+    });
+
+    const urlParams = new URLSearchParams(window.location.search);
+    const roomCode = urlParams.get("code");
+
+    if (roomCode) {
+      socket.emit("joinRoom", roomCode);
+      document.getElementById("roomCodeDisplay").innerText = `Room: ${roomCode}`;
+    } else {
+      alert("Room code not found in URL.");
+    }
+
+    const chatMessages = document.getElementById("chatMessages");
+    const chatText = document.getElementById("chatText");
+
+    function sendMessage() {
+      const message = chatText.value.trim();
+      if (message && roomCode) {
+        socket.emit("chatMessage", { room: roomCode, message });
+        chatText.value = "";
+      }
+    }
+
+    window.sendMessage = sendMessage;
+
+    socket.on("chatMessage", (msg) => {
+      const p = document.createElement("p");
+      p.textContent = msg;
+      chatMessages.appendChild(p);
+      chatMessages.scrollTop = chatMessages.scrollHeight;
+    });
+  </script>
 </body>
 </html>
