--- a/index.html
+++ b/index.html
@@ -1,75 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Paint-Web Main Menu</title>
+  <link rel="stylesheet" href="style.css" />
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
-    }
-    h1 {
-      font-size: 3em;
-      margin-bottom: 0.5em;
-    }
-    .menu {
-      display: flex;
-      flex-direction: column;
-      gap: 1em;
-      width: 300px;
+      background: #f0f0f0;
     }
     input, button {
       padding: 10px;
-      font-size: 1em;
-      border: 1px solid #ccc;
-      border-radius: 5px;
+      font-size: 1rem;
+      margin: 5px;
     }
-    button {
-      background: #007bff;
-      color: white;
-      cursor: pointer;
+    h1 {
+      margin-bottom: 1rem;
     }
     .version {
       position: absolute;
       bottom: 10px;
-      right: 10px;
-      color: #666;
-      font-size: 0.9em;
+      font-size: 0.8em;
+      color: #999;
     }
   </style>
 </head>
 <body>
   <h1>Paint-Web</h1>
-  <div class="menu">
-    <input type="text" id="username" placeholder="Enter your username">
-    <button onclick="createRoom()">Create Room</button>
-    <input type="text" id="roomCode" placeholder="Enter Room Code">
-    <button onclick="joinRoom()">Join Room</button>
-  </div>
-
+  <input id="userName" type="text" placeholder="Enter your name" />
+  <br />
+  <input id="roomCode" type="text" placeholder="Room code (leave empty to create)" />
+  <br />
+  <button onclick="enterRoom()">Enter Room</button>
   <div class="version">Version 1.0</div>
 
   <script>
-    function createRoom() {
-      const username = document.getElementById("username").value.trim();
-      if (!username) return alert("Please enter a username");
-      const code = Math.random().toString(36).substr(2, 5).toUpperCase();
-      window.location.href = `/room.html?code=${code}&user=${encodeURIComponent(username)}`;
+    function randomCode(length = 5) {
+      return Math.random().toString(36).substring(2, 2 + length).toUpperCase();
     }
 
-    function joinRoom() {
-      const username = document.getElementById("username").value.trim();
-      const code = document.getElementById("roomCode").value.trim().toUpperCase();
-      if (!username || !code) return alert("Please enter both username and room code");
-      window.location.href = `/room.html?code=${code}&user=${encodeURIComponent(username)}`;
+    function enterRoom() {
+      const user = document.getElementById("userName").value.trim() || "Guest";
+      let code = document.getElementById("roomCode").value.trim().toUpperCase();
+      if (!code) code = randomCode();
+      window.location.href = `room.html?code=${code}&user=${encodeURIComponent(user)}`;
     }
   </script>
 </body>
